--- a/recipes/genehunter/meta.yaml
+++ b/recipes/genehunter/meta.yaml
@@ -6,6 +6,9 @@ source:
   fn: ghm-3.1.tgz
   url: https://www.helmholtz-muenchen.de/fileadmin/GENEPI/downloads/ghm-3.1.tgz
   md5: 0cfdc1aa80e7501f4766fa9537f96897
+  patches:
+    - osx-makefile.patch # [osx]
+    
 
 build:
   number: 0
@@ -14,6 +17,12 @@ requirements:
   build:
     - gcc   # [not osx]
     - llvm  # [osx]
+    - libgcc  # [linux]
+    - zlib {{CONDA_ZLIB}}*
+
+  run:
+    - libgcc  # [linux]
+    - zlib {{CONDA_ZLIB}}*
 
 test:
   commands:
@@ -21,5 +30,6 @@ test:
 
 about:
   home: https://www.helmholtz-muenchen.de/en/ige/service/software-download/genehunter-modscore/index.html
-  license: https://www.helmholtz-muenchen.de/fileadmin/GENEPI/downloads/COPYRIGHT.ghm.3.1
+  license: INDIVIDUAL 
+    # see: https://www.helmholtz-muenchen.de/fileadmin/GENEPI/downloads/COPYRIGHT.ghm.3.1
   summary: A MOD-score analysis in which parametric LOD scores are maximized over the parameters of the trait model
